<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="66dp"
    android:background="@color/colorWhiteTrans"
    android:minHeight="?android:attr/listPreferredItemHeight">

    <TextView
        android:id="@+id/listview_row_leaderboard_rating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="cursive"
        android:textColor="@color/colorWhite"
        android:text="@string/listview_rating"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/listview_row_leaderboard_name"/>

    <TextView
        android:id="@+id/listview_row_leaderboard_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/dancing_script"
        android:textColor="@color/colorWhite"
        android:text="@string/listview_name"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/listview_row_leaderboard_rating"
        app:layout_constraintEnd_toStartOf="@+id/listview_row_leaderboard_attempts" />

    <TextView
        android:id="@+id/listview_row_leaderboard_attempts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/colorWhite"
        android:text="@string/listview_attempts"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/listview_row_leaderboard_name"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>

