<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="20dp"
        android:layout_height="20dp"></LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="40dp"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/belgrano"
                android:text="@string/dialog_rating"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="5dp"
                android:layout_height="5dp"></LinearLayout>

            <TextView
                android:id="@+id/textViewAttempts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/belgrano"
                android:text="@string/dialog_attempts"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="30dp"></LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewAttemptsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/belgrano"
                android:text="@string/dialog_rating"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="5dp"
                android:layout_height="5dp"></LinearLayout>

            <TextView
                android:id="@+id/textViewRatingValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/belgrano"
                android:text="@string/dialog_rating"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="20dp"
        android:layout_height="20dp"></LinearLayout>

    <TextView
        android:id="@+id/textViewEnterData"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fontFamily="@font/belgrano"
        android:text="@string/dialog_message" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="@font/belgrano" />

</LinearLayout>